[FEAT] 사용자 모집, 추천, 리뷰허용, 리뷰 작성 구현

--- a/app/src/main/res/layout/activity_daily_calendar.xml
+++ b/app/src/main/res/layout/activity_daily_calendar.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="20dp"
-                android:text="x월 xx일"
+                android:text=""
                 android:textSize="16sp"
                 android:textStyle="bold"/>
 
