--- a/app/src/main/res/drawable/view_review_stat.xml
+++ b/app/src/main/res/drawable/view_review_stat.xml
@@ -6,7 +6,7 @@
   <path
       android:strokeWidth="1"
       android:pathData="M305,0.5L12,0.5A11.5,11.5 0,0 0,0.5 12L0.5,208A11.5,11.5 0,0 0,12 219.5L305,219.5A11.5,11.5 0,0 0,316.5 208L316.5,12A11.5,11.5 0,0 0,305 0.5z"
-      android:fillColor="#D9D9D9"
+      android:fillColor="@color/item_color"
       android:fillAlpha="0.34"
       android:strokeColor="#3AC0A0"/>
 </vector>
