--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -80,7 +80,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         android:textSize="24sp"
                         android:textStyle="bold"
-                        android:textColor="@color/sharehands_black"
+                        android:textColor="@color/text_color"
                         android:layout_marginTop="28dp"
                         android:layout_marginStart="28dp"
                         />
@@ -93,7 +93,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_service_title"
                         app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="16dp"
-                        android:textColor="@color/sharehands_black"
+                        android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         />
@@ -106,7 +106,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_user_num_title"
                         app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="12dp"
-                        android:textColor="@color/sharehands_black"
+                        android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         />
@@ -119,7 +119,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_user_rating_title"
                         app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="12dp"
-                        android:textColor="@color/sharehands_black"
+                        android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         />
@@ -134,7 +134,7 @@
                         android:layout_marginStart="20dp"
                         tools:text="10명"
                         android:textSize="16sp"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/text_color" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_num"
@@ -145,7 +145,7 @@
                         app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
                         tools:text="4.0"
                         android:textSize="16sp"
-                        android:textColor="@color/sharehands_black"/>
+                        android:textColor="@color/text_color"/>
 
                     <TextView
                         android:id="@+id/tv_user_rating_achievement"
@@ -155,9 +155,8 @@
                         app:layout_constraintTop_toTopOf="@id/tv_user_sum_title"
                         app:layout_constraintBottom_toBottomOf="@id/tv_user_sum_title"
                         android:text="성취감"
-                        android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="#777777"/>
+                        android:textColor="@color/text_color"/>
 
                     <TextView
                         android:id="@+id/tv_user_rating_traffic"
@@ -166,9 +165,8 @@
                         app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
                         app:layout_constraintTop_toBottomOf="@id/tv_user_rating_achievement"
                         android:text="교통편"
-                        android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="#777777"
+                        android:textColor="@color/text_color"
                         android:layout_marginTop="12dp"/>
 
                     <TextView
@@ -178,9 +176,8 @@
                         app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
                         app:layout_constraintTop_toBottomOf="@id/tv_user_rating_traffic"
                         android:text="활동의 체계"
-                        android:textStyle="bold"
                         android:textSize="16sp"
-                        android:textColor="#777777"
+                        android:textColor="@color/text_color"
                         android:layout_marginTop="12dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="28dp"/>
