--- a/app/src/main/res/layout/activity_review_write.xml
+++ b/app/src/main/res/layout/activity_review_write.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.search.ReviewWriteViewModel" />
 
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -14,8 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:background="@drawable/sharehands_toolbar"
-            android:elevation="0dp"
-            app:elevation="0dp"
+            android:elevation="24dp"
+            app:elevation="12dp"
             app:layout_insetEdge="start">
 
             <androidx.appcompat.widget.Toolbar
@@ -63,7 +68,7 @@
                     android:layout_marginTop="24dp"
                     android:text="평가하기"
                     android:textColor="@color/sharehands_green_strong"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +80,7 @@
                     android:layout_marginTop="20dp"
                     android:text="성취감을 얼마나 느끼셨나요?"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_rate"
                     app:layout_constraintTop_toBottomOf="@id/tv_rate" />
@@ -95,7 +100,7 @@
                     android:layout_marginTop="20dp"
                     android:text="교통편은 어땠나요?"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_rate"
                     app:layout_constraintTop_toBottomOf="@id/rating_bar_achievement"/>
@@ -116,7 +121,7 @@
                     android:layout_marginTop="20dp"
                     android:text="봉사활동이 체계적으로 이뤄졌나요?"
                     android:textColor="@color/text_color"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_rate"
                     app:layout_constraintTop_toBottomOf="@id/rating_bar_traffic"/>
@@ -137,7 +142,7 @@
                     android:layout_marginTop="24dp"
                     android:text="총평을 작성해주세요."
                     android:textColor="@color/sharehands_green_strong"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="@id/tv_rate"
                     app:layout_constraintTop_toBottomOf="@id/rating_bar_system"/>
@@ -167,6 +172,7 @@
 
                 </FrameLayout>
 
+
                 <EditText
                     android:id="@+id/edit_rate_overall"
                     android:layout_width="0dp"
@@ -175,10 +181,12 @@
                     app:layout_constraintStart_toStartOf="@id/tv_rate"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="24dp"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="16dp"
                     android:hint="10자 이상 작성해주세요."
                     android:gravity="start"
-                    android:padding="20dp"
+                    android:padding="12dp"
+                    android:textSize="14sp"
+                    android:lineHeight="14sp"
                     android:background="@null"
                     android:textColor="@color/sharehands_black"
                     android:maxLength="1000"
@@ -190,6 +198,8 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/edit_rate_overall"
                     app:layout_constraintEnd_toEndOf="@id/edit_rate_overall"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="120dp"
                     android:layout_marginTop="12dp"
                     android:orientation="horizontal">
 
@@ -197,7 +207,7 @@
                         android:id="@+id/tv_curr_length"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        tools:text="10"
+                        android:text="0"
                         android:textColor="@color/text_color"
                         android:textSize="16sp"/>
 
@@ -212,66 +222,76 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_warning"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/layout_char_count"
-                    app:layout_constraintStart_toStartOf="@id/tv_rate"
-                    android:layout_marginTop="20dp"
-                    android:text="모든 항목을 채워주세요."
-                    android:textColor="@color/sharehands_red"
-                    android:textSize="16sp"
-                    android:visibility="visible"/>
-
-
-                <FrameLayout
-                    android:id="@+id/frame_btn_submit"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_warning"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
-                    android:layout_marginTop="8dp">
-
-                    <TextView
-                        android:id="@+id/btn_submit_active"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/ic_button_green"
-                        android:text="작성 완료"
-                        android:gravity="center"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:elevation="24dp"
-                        app:elevation="20dp"
-                        android:visibility="invisible"/>
-
-                    <TextView
-                        android:id="@+id/btn_submit_inactive"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/ic_button_green"
-                        android:text="작성 완료"
-                        android:backgroundTint="@color/sharehands_gray"
-                        android:gravity="center"
-                        android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textSize="20sp"
-                        android:elevation="24dp"
-                        android:visibility="visible"/>
-                </FrameLayout>
-
-
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/item_color"
+            android:layout_gravity="bottom"
+            android:nestedScrollingEnabled="false">
+
+            <TextView
+                android:id="@+id/tv_warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="모든 항목을 채워주세요."
+                android:textColor="@color/sharehands_red"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:layout_marginTop="6dp"
+                android:visibility="gone"/>
+
+
+            <FrameLayout
+                android:id="@+id/frame_btn_submit"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_warning"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="12dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="12dp">
+
+                <TextView
+                    android:id="@+id/btn_submit_active"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/ic_button_green"
+                    android:text="작성 완료"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:elevation="24dp"
+                    app:elevation="20dp"
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/btn_submit_inactive"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/ic_button_green"
+                    android:backgroundTint="@color/sharehands_gray"
+                    android:elevation="24dp"
+                    android:gravity="center"
+                    android:text="작성 완료"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+            </FrameLayout>
+
+        </LinearLayout>
+
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
