--- a/app/src/main/res/layout/activity_service_write.xml
+++ b/app/src/main/res/layout/activity_service_write.xml
@@ -858,7 +858,8 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/border_bottom"
                         android:visibility="visible"
-                        android:inputType="numberDecimal"
+                        android:inputType="phone"
+                        android:maxLength="13"
                         android:onTextChanged="@{(s, start, before, count) -> viewModel.onPhoneChanged(s, start, before, count)}"
                         android:maxLines="1"/>
 
