[FIX] 봉사활동 찾기 리스트 빠른 지원 후 스크롤 시 원상복귀 오류 수정

--- a/app/src/main/res/layout/activity_review_write.xml
+++ b/app/src/main/res/layout/activity_review_write.xml
@@ -188,7 +188,7 @@
                     android:textSize="14sp"
                     android:lineHeight="14sp"
                     android:background="@null"
-                    android:textColor="@color/sharehands_black"
+                    android:textColor="@color/text_color"
                     android:maxLength="1000"
                     />
 
