--- a/app/src/main/res/layout/activity_review_detail.xml
+++ b/app/src/main/res/layout/activity_review_detail.xml
@@ -2,6 +2,7 @@
 
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
 
     </data>
@@ -15,35 +16,35 @@
             android:layout_height="72dp"
             android:background="@drawable/sharehands_toolbar"
             android:elevation="0dp"
-            app:elevation="0dp"
-            app:contentInsetStart="0dp">
+            app:contentInsetStart="0dp"
+            app:layout_insetEdge="start"
+            app:elevation="0dp">
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:elevation="0dp"
-                app:elevation="0dp">
+                app:elevation="0dp"
+                app:contentInsetStart="0dp">
 
                 <ImageView
                     android:id="@+id/iv_go_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_back_dir"
-                    app:tint="@color/sharehands_black"
                     android:layout_marginStart="16dp"
-                    android:padding="10dp"
-                    />
+                    android:padding="20dp"
+                    android:src="@drawable/ic_back_dir"
+                    app:tint="@color/sharehands_black" />
 
                 <TextView
                     android:id="@+id/tv_review_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="리뷰"
                     android:layout_gravity="center"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
+                    android:text="리뷰"
                     android:textColor="@color/sharehands_black"
-                    />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </androidx.appcompat.widget.Toolbar>
 
@@ -56,143 +57,177 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
+                android:layout_height="match_parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/layout_review_stat"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
                     android:layout_marginTop="24dp"
-                    android:background="@drawable/view_review_stat">
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/view_review_stat"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_service_title"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        tools:text="봉사 제목"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:textSize="24sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/text_color"
-                        android:layout_marginTop="28dp"
                         android:layout_marginStart="28dp"
-                        />
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="28dp"
+                        android:textColor="@color/text_color"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:maxLines="2"
+                        android:ellipsize="end"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:text="봉사 제목" />
 
                     <TextView
                         android:id="@+id/tv_user_num_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="작성자 수"
-                        app:layout_constraintTop_toBottomOf="@id/tv_service_title"
-                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="16dp"
+                        android:text="작성자 수"
                         android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        />
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        app:layout_constraintTop_toBottomOf="@id/tv_service_title" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="평점"
-                        app:layout_constraintTop_toBottomOf="@id/tv_user_num_title"
-                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="12dp"
+                        android:text="평점"
                         android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        />
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_num_title" />
 
                     <TextView
                         android:id="@+id/tv_user_sum_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="요약"
-                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_title"
-                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
                         android:layout_marginTop="12dp"
+                        android:text="요약"
                         android:textColor="@color/text_color"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        />
+                        app:layout_constraintStart_toStartOf="@id/tv_service_title"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_title" />
 
                     <TextView
                         android:id="@+id/tv_user_num_content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:textColor="@color/text_color"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_num_title"
                         app:layout_constraintStart_toEndOf="@id/tv_user_num_title"
                         app:layout_constraintTop_toTopOf="@id/tv_user_num_title"
-                        app:layout_constraintBottom_toBottomOf="@id/tv_user_num_title"
-                        android:layout_marginStart="20dp"
-                        tools:text="10명"
-                        android:textSize="16sp"
-                        android:textColor="@color/text_color" />
+                        tools:text="10명" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/text_color"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
                         app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
                         app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
-                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
-                        tools:text="4.0"
-                        android:textSize="16sp"
-                        android:textColor="@color/text_color"/>
+                        tools:text="4.0" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_achievement"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
-                        app:layout_constraintTop_toTopOf="@id/tv_user_sum_title"
-                        app:layout_constraintBottom_toBottomOf="@id/tv_user_sum_title"
                         android:text="성취감"
-                        android:textSize="16sp"
-                        android:textColor="@color/text_color"/>
+                        android:textColor="@color/text_color"
+                        android:textSize="12sp"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_num_content"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_sum_title" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_traffic"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
-                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_achievement"
+                        android:layout_marginTop="12dp"
                         android:text="교통편"
-                        android:textSize="16sp"
                         android:textColor="@color/text_color"
-                        android:layout_marginTop="12dp"/>
+                        android:textSize="12sp"
+                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_achievement" />
 
                     <TextView
                         android:id="@+id/tv_user_rating_system"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
-                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_traffic"
-                        android:text="활동의 체계"
-                        android:textSize="16sp"
-                        android:textColor="@color/text_color"
                         android:layout_marginTop="12dp"
+                        android:layout_marginBottom="20dp"
+                        android:text="활동의 체계"
+                        android:textColor="@color/text_color"
+                        android:textSize="12sp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:layout_marginBottom="28dp"/>
+                        app:layout_constraintStart_toStartOf="@id/tv_user_rating_achievement"
+                        app:layout_constraintTop_toBottomOf="@id/tv_user_rating_traffic" />
 
                     <RatingBar
                         android:id="@+id/rating_average"
-                        android:layout_width="120dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:isIndicator="true"
                         android:stepSize="0.5"
-                        android:layout_height="16dp"
-                        android:isIndicator="false"
-                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_title"
                         app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_title"
                         app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
+                        style="?android:attr/ratingBarStyleSmall"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_title" />
+
+                    <RatingBar
+                        android:id="@+id/rating_average1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        />
+                        android:isIndicator="true"
+                        android:stepSize="0.5"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_achievement"
+                        app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
+                        style="?android:attr/ratingBarStyleSmall"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_achievement" />
+
+                    <RatingBar
+                        android:id="@+id/rating_average2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:isIndicator="true"
+                        android:stepSize="0.5"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_traffic"
+                        app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
+                        style="?android:attr/ratingBarStyleSmall"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_traffic" />
+
+                    <RatingBar
+                        android:id="@+id/rating_average3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:isIndicator="true"
+                        android:stepSize="0.1"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_user_rating_system"
+                        app:layout_constraintStart_toEndOf="@id/tv_user_rating_system"
+                        style="?android:attr/ratingBarStyleSmall"
+                        app:layout_constraintTop_toTopOf="@id/tv_user_rating_system" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -200,35 +235,34 @@
                     android:id="@+id/view_separator"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="#DBDBDB"
-                    app:layout_constraintTop_toBottomOf="@id/layout_review_stat"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="24dp"
                     android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"/>
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="#DBDBDB"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/layout_review_stat" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:orientation="vertical"
-                    app:layout_constraintTop_toBottomOf="@id/view_separator"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintTop_toBottomOf="@id/view_separator"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="40dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_reviews"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="24dp"
-                        android:layout_marginEnd="24dp"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginBottom="24dp"/>
+                        android:layout_height="wrap_content" />
 
                     <ProgressBar
                         android:id="@+id/progress_review"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -237,20 +271,20 @@
             <LinearLayout
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
                 android:orientation="horizontal">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/btn_write_service"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add"
-                    android:background="@color/sharehands_green_strong"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="24dp"
-                    android:layout_marginBottom="24dp"/>
+                    android:layout_marginBottom="24dp"
+                    android:background="@color/sharehands_green_strong"
+                    android:src="@drawable/ic_add"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
             </LinearLayout>
 
