[FIX] 마이페이지 무한스크롤 이슈 해결

--- a/app/src/main/res/layout/item_service_scrap.xml
+++ b/app/src/main/res/layout/item_service_scrap.xml
@@ -135,6 +135,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_preview_period"
             app:layout_constraintTop_toTopOf="@id/iv_preview_period"
+            app:layout_constraintBottom_toBottomOf="@id/iv_preview_period"
             tools:text="2023.01.01 ~ 2023. 01.01" />
 
         <ImageView
