--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -8,7 +8,7 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/coordinator_layout"
+        android:id="@+id/coordinator_layout_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
