--- a/app/src/main/res/layout/item_service_on_recruit.xml
+++ b/app/src/main/res/layout/item_service_on_recruit.xml
@@ -73,7 +73,6 @@
             android:maxLines="2"
             android:ellipsize="end"/>
 
-
         <ImageView
             android:id="@+id/iv_recruit_location"
             android:layout_width="16dp"
@@ -83,7 +82,7 @@
             app:tint="@color/sharehands_green_medium"
             app:layout_constraintStart_toStartOf="@id/tv_recruit_title"
             app:layout_constraintTop_toBottomOf="@id/tv_recruit_title"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             />
 
         <TextView
@@ -132,6 +131,7 @@
             app:layout_constraintTop_toTopOf="@id/iv_recruit_location"
             app:layout_constraintStart_toEndOf="@id/iv_recruit_period"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/iv_recruit_location"
             android:layout_marginEnd="24dp"
             />
 
@@ -145,7 +145,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_recruit_period"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             />
 
         <TextView
@@ -203,9 +203,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_goto_recruit"
-            android:padding="4dp"
+            android:padding="2dp"
             android:visibility="visible"
-            android:layout_marginTop="-2dp"
+            android:layout_marginTop="-6dp"
             app:layout_constraintTop_toTopOf="@id/iv_service_recruit_user"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="20dp"/>
@@ -217,7 +217,8 @@
             android:src="@drawable/ic_service_delete"
             app:layout_constraintTop_toBottomOf="@id/iv_goto_recruit"
             app:layout_constraintStart_toStartOf="@id/iv_goto_recruit"
-            android:padding="4dp" />
+            android:layout_marginTop="2dp"
+            android:padding="2dp" />
 
 
         <View
