--- a/app/src/main/res/layout/fragment_search_health.xml
+++ b/app/src/main/res/layout/fragment_search_health.xml
@@ -24,30 +24,46 @@
             android:layout_marginTop="24dp"
             android:layout_marginStart="24dp"/>
 
+        <Spinner
+            android:id="@+id/spinner_service_category"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_spinner"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_total_health"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintTop_toTopOf="@id/tv_total_health"/>
+
+
         <!-- TODO 스크롤뷰 적용 여부 고려 -->
 
-        <LinearLayout
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refresh_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/tv_total_health"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical">
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_result_health"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"/>
+                android:layout_height="wrap_content" />
 
-            <ProgressBar
-                android:id="@+id/progress_health"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"/>
 
-        </LinearLayout>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+        <ProgressBar
+            android:id="@+id/progress_health"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/refresh_layout"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
 
