--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -290,6 +290,19 @@
                     app:layout_constraintStart_toEndOf="@id/iv_memo"
                     app:layout_constraintTop_toTopOf="@id/iv_memo" />
 
+                <TextView
+                    android:id="@+id/tv_add_memo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="12dp"
+                    android:drawableEnd="@drawable/ic_forward_dir"
+                    android:padding="12dp"
+                    android:text="메모 추가  "
+                    app:layout_constraintBottom_toBottomOf="@id/tv_memo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_memo" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_memo"
                     android:layout_width="match_parent"
